# DW

./: .env.sample  .flake8  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
announcements/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
announcements/migrations/: 0001_initial.py  0002_initial.py
announcements/validators/: forbidden_words.txt  validators.py
config/: settings.py  urls.py
tests/: conftest.py  tests_announcement.py  tests_review.py  tests_user.py
users/: admin.py  models.py  permissions.py  serializers.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
